# riscv-steel

./: .clang-format  .gitignore  404.html  AUTHORS  AUTHORS.md  CODING_STYLE.md  CONTRIBUTING.md  FUNDING.yml  LICENSE  LICENSE.md  README  README.md  coremark.mem  extra.css  index.html  mkdocs.yml  riscv-steel-core.v  riscv_steel_core.v  riscv_steel_core_axi_wrapper.v  rv32i_steel_core.v  steel_core.v
api/: index.html  rvsteel.c  rvsteel.h
basic-tests/: addi.s  and.s  auipc.s  beq.s  bge.s  bgeu.s  blt.s  bne.s  csrrc.s  csrrci.s  csrrs.s  csrrsi.s  csrrw.s  csrrwi.s  ebreak.s  ecall.s  fence.s  gpio.mem  gpio.s  jal.s  jalr.s  lb.coe  lb.s  lbu.s  lh.s  lui.s  memgen.sh  mret.s  or.s  sb.s  sll.s  slt.s  slti.s  sltiu.s  sltu.s  sra.s  srl.s  srli.s  sub.s
compliance/: I-CSRRWI-01.elf.mem  I-SH-01.elf.mem  I-SRL-01.elf.mem  verify.sh
core/: index.html
coremark/: coremark.mem  dump.txt
demos/freertos/software/: CMakeLists.txt  Makefile  README.md  libsteel.cmake  link.ld  main.cpp
demos/freertos/software/cmake/: freertos.cmake
demos/freertos/software/source/: boot.S  link.ld  main.cpp
demos/freertos/software/startup/: startup_reset.S
demos/mtimer/software/: CMakeLists.txt  Makefile  link.ld  main.c  main.cpp
demos/mtimer/software/boot/: startup_init.c
dev-template/: Makefile  main.c
docs/: README.md  config.md  details.md  examplesoc.md  extra.css  extra.js  getting.md  index.md  mkdocs.yml  overview.md  software.md  steelio.md  timing.md  traps.md  uarch.md
get_started/: index.html
getstarted/: index.html
getting-started/: index.html
gettingstarted/: index.html
hardware/: README.md  axi4-lite-crossbar.v  axi4lite_crossbar.v  bus-crossbar.v  bus-mux.v  index.html  ram-memory.v  ram.v  rvsteel-core.v  rvsteel-soc.v  rvsteel.v  rvsteel_bus.v  rvsteel_core.v  rvsteel_spi.v  rvsteel_uart.v  system-bus.v  tightly-coupled-memory.v  uart.v
hardware/soc/tests/verilator/: CMakeLists.txt  Makefile  argparse.h  main.cpp  ram_init.cpp  soc_sim.v  vargs.vc  vcfg.vlt
hello-world/: README.md  hello-world.v
hello-world-project/: crossbar-axi4-lite.v  hello-world-arty-a7-35t.v  hello-world-arty-a7-35t.xpr  hello-world.mem  ram-memory-axi4-lite.v  uart-axi4-lite.v
hello_world/: hello_world.c  hello_world.elf  hello_world.mem  hello_world.v  hello_world_arty_a7_constraints.xdc
images/: irq.json  read-timing.json
ip/: mtimer.md  mtimer.v  ram-memory.v  ram_memory.v  rvsteel-core.v  rvsteel-soc.v  rvsteel_core.v  rvsteel_soc.v  system-bus.v  system_bus.v  uart.v
lib/: CMakeLists.txt  rvsteel_link.ld
libsteel/: CMakeLists.txt  libsteel.cmake  rvsteel_boot.S  rvsteel_csr.h  rvsteel_globals.h  rvsteel_soc.h  rvsteel_spi.h
license/: index.html
mcu/: index.html
mem/: add.mem  add.s  and.txt  andi.s  andi.txt  beq.s  bge.mem  bge.s  blt.mem  bltu.s  bne.mem  lb.s  lb.txt  lbu.mem  lbu.s  lhu.mem  lhu.s  lw.mem  memgen.sh  ori.s  sb.mem  sh.mem  sh.s  sll.mem  sll.txt  slli.mem  slli.s  slti.mem  sltiu.mem  sltu.mem  srai.s  srl.mem  sw.s  xor.s  xori.s
newproject/: index.html
r5-api/: r5-api.c  r5-api.h
resources/: hello-world.c  hello-world.elf  hello-world.mem  hello-world.v  riscv-steel-core-axi-wrapper.v
riscv-compliance/: I-ADD-01.signature.output  I-ADDI-01.signature.output  I-AND-01.signature.output  I-ANDI-01.signature.output  I-AUIPC-01.signature.output  I-BEQ-01.signature.output  I-BGE-01.signature.output  I-BGEU-01.elf.mem  I-BGEU-01.signature.output  I-BLT-01.signature.output  I-BLTU-01.signature.output  I-BNE-01.signature.output  I-CSRRC-01.signature.output  I-CSRRCI-01.signature.output  I-CSRRS-01.signature.output  I-CSRRSI-01.signature.output  I-CSRRW-01.signature.output  I-CSRRWI-01.signature.output  I-DELAY_SLOTS-01.signature.output  I-EBREAK-01.signature.output  I-ECALL-01.signature.output  I-ENDIANESS-01.signature.output  I-IO-01.signature.output  I-JAL-01.signature.output  I-JALR-01.signature.output  I-LB-01.signature.output  I-LBU-01.signature.output  I-LH-01.signature.output  I-LHU-01.signature.output  I-LW-01.signature.output  I-MISALIGN_JMP-01.signature.output  I-MISALIGN_LDST-01.signature.output  I-NOP-01.signature.output  I-OR-01.signature.output  I-ORI-01.elf.mem  I-ORI-01.signature.output  I-RF_size-01.signature.output  I-RF_width-01.signature.output  I-RF_x0-01.signature.output  I-SB-01.elf.mem  (+16 more)
riscv-tests/: memgen.sh  rv32ui-p-add  rv32ui-p-add.dump  rv32ui-p-addi  rv32ui-p-addi.dump  rv32ui-p-and  rv32ui-p-and.dump  rv32ui-p-andi  rv32ui-p-andi.dump  rv32ui-p-auipc  rv32ui-p-auipc.dump  rv32ui-p-beq  rv32ui-p-beq.dump  rv32ui-p-bge  rv32ui-p-bge.dump  rv32ui-p-bgeu  rv32ui-p-bgeu.dump  rv32ui-p-blt  rv32ui-p-blt.dump  rv32ui-p-bltu  rv32ui-p-bltu.dump  rv32ui-p-bne  rv32ui-p-bne.dump  rv32ui-p-fence_i  rv32ui-p-fence_i.dump  rv32ui-p-jal  rv32ui-p-jal.dump  rv32ui-p-jalr  rv32ui-p-jalr.dump  rv32ui-p-lb  rv32ui-p-lb.dump  rv32ui-p-lbu  rv32ui-p-lbu.dump  rv32ui-p-lh  rv32ui-p-lh.dump  rv32ui-p-lhu  rv32ui-p-lhu.dump  rv32ui-p-lui  rv32ui-p-lui.dump  rv32ui-p-lw  (+41 more)
rtl/: alu.v  branch_unit.v  control_unit.v  csr_file.v  decoder.v  (+7 more)
software/: .gitignore  CMakeLists.txt  Makefile  README.md  elf2hex.sh  hello  hello.c  hello.hex  hello.txt  libsteel.cmake  link.ld  main.cpp
software/api/: rvsteel-csr.h  rvsteel-gcc.h  rvsteel-soc.c  rvsteel_api.c  rvsteel_api.h  rvsteel_csr.h  rvsteel_def.h  rvsteel_gcc.h  rvsteel_globals.h  rvsteel_gpio.h  rvsteel_mtimer.h  rvsteel_soc.c  rvsteel_soc.h  rvsteel_uart.h
software/etc/: link.ld
software/include/: r5-api.h  rvsteel.h  rvsteel_globals.h  rvsteel_gpio.h  rvsteel_mtimer.h  rvsteel_uart.h
software/libsteel/: boot.S  csr.h  globals.h  gpio.h  libsteel.h  mtimer.h  soc.h  spi.h  trap_handlers.c  trap_vector.S  uart.h
software/source/: boot.S  hello-world.c  link.ld  main.cpp
software/template_cmake/: .gitignore  CMakeLists.txt
software/template_cmake/startup/: link.ld
software/template_project/: Makefile  main.c
templates/freertos/: CMakeLists.txt  FreeRTOS.cmake  LibSteel.cmake  Makefile  bootstrap.S  configure  main.c  rvsteel_mcu_wrapper.v  trap_handlers.c
(+1794 files in other folders)
